# rx-pipeline

./: .gitignore  CMakeLists.txt  README.md  astylerc.sh
doc/: Doxyfile.sh
src/: CMakeLists.txt  atom.h  buffer.c  buffer.h  common.h  connector.c  connector.h  log.c  log.h  loop.c  loop.h  main.c  obs_join.c  obs_join.h  obs_timer.c  obs_timer.h  observable.c  observable.h  observable_file.c  observable_file.h  observable_join.c  observable_join.h  observable_pipe.c  observable_pipe.h  observable_timer.c  observable_timer.h  pipeline.c  pipeline.h  utils.h
src/observables/: observable_data_generator.c  observable_data_generator.h  observable_file.c  observable_file.h  observable_join.c  observable_join.h  observable_map.c  observable_map.h  observable_pipe.c  observable_pipe.h  observable_proxy.c  observable_proxy.h  observable_timer.c  observable_timer.h  observable_udp_socket.c  observable_udp_socket.h
src/utils/: utils.c  utils.h
src/utils/klib/: README.md  khash.h  kvec.h
test/: CMakeLists.txt  test_data_generator.c  test_file_observer.c  test_join_observer.c  test_map_observer.c  test_timer_observer.c  test_udp_socket_observer.c  utils.c  utils.h
